--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" id="page-{% block page_id %}{% endblock %}">
     {% block main %}{% endblock %}
 </div>
 {% endblock %}
